# apt-uu-config

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
apt_uu_config/: __init__.py  app_context.py
apt_uu_config/apt/: __init__.py  config_reader.py  config_writer.py  distro_info.py  origins.py  policy_parser.py  sources_parser.py  uu_config_reader.py
apt_uu_config/cli/: __main__.py  config.py  disable.py  enable.py  origin.py  show.py  status.py
apt_uu_config/config/: app_config.py
apt_uu_config/models/: __init__.py  origin.py  repository.py  uu_config.py  uu_pattern.py
docs/: APT_GUIDE.md  ARCHITECTURE.md  CONFIGURATION.md
tests/: __init__.py  conftest.py  test_import.py
tests/apt/: __init__.py  test_config_reader.py  test_distro_info.py  test_policy_parser.py  test_uu_config_reader.py
tests/cli/: conftest.py  test_cli.py  test_config.py  test_show.py  test_status.py
tests/config/: test_app_config.py
tests/logging/: test_logging.py
tests/models/: test_origin.py  test_repository.py  test_uu_config.py  test_uu_pattern.py
